[metadata]
name = oasis_rmp_rst_to_input
description = Copies rmp and rst OASIS files from experiments to input folders for AWICM3
description-file = README.rst
author = Miguel Andres-Martinez
author-email = miguel.andres-martinez@awi.de
license = GPLv3

[entry_points]
esm_tools.plugins =
        oasis_rmp_rst_to_input = oasis_rmp_rst_to_input.oasis_rmp_rst_to_input:oasis_rmp_rst_to_input
